20030703
 - (dtucker) OpenBSD CVS Sync
   - djm@cvs.openbsd.org 2003/06/28 07:48:10
     [sshd.c]
     report pidfile creation errors, based on patch from Roumen Petrov;
     ok markus@
   - deraadt@cvs.openbsd.org 2003/06/28 16:23:06
     [atomicio.c atomicio.h authfd.c clientloop.c monitor_wrap.c msg.c
     progressmeter.c scp.c sftp-client.c ssh-keyscan.c ssh.h sshconnect.c
     sshd.c]
     deal with typing of write vs read in atomicio
   - markus@cvs.openbsd.org 2003/06/29 12:44:38
     [sshconnect.c]
     memset 0, not \0; andrushock@korovino.net
   - markus@cvs.openbsd.org 2003/07/02 12:56:34
     [channels.c]
     deny dynamic forwarding with -R for v1, too; ok djm@
   - markus@cvs.openbsd.org 2003/07/02 14:51:16
     [channels.c ssh.1 ssh_config.5]
     (re)add socks5 suppport to -D; ok djm@
     now ssh(1) can act both as a socks 4 and socks 5 server and
     dynamically forward ports.
   - markus@cvs.openbsd.org 2003/07/02 20:37:48
     [ssh.c]
     convert hostkeyalias to lowercase, otherwise uppercase aliases will
     not match at all; ok henning@
   - markus@cvs.openbsd.org 2003/07/03 08:21:46
     [regress/dynamic-forward.sh]
     add socks5; speedup; reformat; based on patch from dtucker@zip.com.au
   - markus@cvs.openbsd.org 2003/07/03 08:24:13
     [regress/Makefile]
     enable tests for dynamic fwd via socks (-D), uses nc(1)
   - djm@cvs.openbsd.org 2003/07/03 08:09:06
     [readconf.c readconf.h ssh-keysign.c ssh.c]
     fix AddressFamily option in config file, from brent@graveland.net;
     ok markus@

20030630
 - (djm) Search for support functions necessary to build our 
   getrrsetbyname() replacement. Patch from Roumen Petrov 

20030629
 - (dtucker) [includes.h] Bug #602: move #include of netdb.h to after in.h
   (fixes compiler warnings on Solaris 2.5.1).
 - (dtucker) [configure.ac] Add sanity test after system-dependant compiler
   flag modifications.
   
20030628
 - (djm) Bug #591: use PKCS#15 private key label as a comment in case 